--- a/client/dev/partials/projects/indicators/analysis.html
+++ b/client/dev/partials/projects/indicators/analysis.html
@@ -39,7 +39,7 @@
 				   required
 				   class="form-control input-sm" />
 
-			<p class="help-block" ng-if="reportForm.begin.$error.required" translate="form.mandatory"></p>
+			<p class="help-block" ng-if="reportForm.date.$error.required" translate="form.mandatory"></p>
 		</div>
 	</div>
 
