--- a/client/dev/partials/projects/activity/collection-form-edition.html
+++ b/client/dev/partials/projects/activity/collection-form-edition.html
@@ -68,9 +68,9 @@
 	</div>
 
 	<div class="form-group" ng-if="form.periodicity !== 'free'">
-		<label for="periodicity" class="col-sm-2 control-label" translate="shared.begin"></label>
-		<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="(form.start || project.begin)|amDateFormat:'YYYY-MM-DD'">
-			<optional-date ng-model="form.start" default="project.begin"></optional-date>
+		<label for="periodicity" class="col-sm-2 control-label" translate="shared.start"></label>
+		<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="(form.start || project.start)|amDateFormat:'YYYY-MM-DD'">
+			<optional-date ng-model="form.start" default="project.start"></optional-date>
 		</div>
 	</div>
 
