--- a/client/dev/partials/projects/activity/olap.html
+++ b/client/dev/partials/projects/activity/olap.html
@@ -67,16 +67,16 @@
 			<div class="row">
 				<div class="col-sm-6">
 					<div class="form-group">
-						<label for="indicator" class="col-sm-2 control-label" translate="shared.begin"></label>
+						<label for="indicator" class="col-sm-2 control-label" translate="shared.start"></label>
 						<div class="col-sm-10">
 							<div class="input-group">
 								<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
 								<input type="text" 
 									   datepicker-popup="longDate"
-									   name="begin"
-									   ng-model="dates.begin"
-									   is-open="beginDateOpen"
-									   ng-click = "beginDateOpen = true"
+									   name="start"
+									   ng-model="dates.start"
+									   is-open="startDateOpen"
+									   ng-click = "startDateOpen = true"
 									   required
 									   ng-max="dates.end"
 									   class="form-control input-sm" />
@@ -96,7 +96,7 @@
 									   ng-model="dates.end"
 									   is-open="endDateOpen"
 									   ng-click = "endDateOpen = true"
-									   ng-min="dates.begin"
+									   ng-min="dates.start"
 									   class="form-control input-sm"
 									   required />
 							</div>
