--- a/client/dev/partials/projects/list.html
+++ b/client/dev/partials/projects/list.html
@@ -31,7 +31,7 @@
 			<th style="width: 55px"></th>
 			<th><a ng-click="pred='name';rev=!rev">{{'shared.name'|translate}}</a></th>
 			<th><a ng-click="pred='themes';rev=!rev">{{'indicator.themes'|translate}}</a></th>
-			<th style="width: 100px;"><a ng-click="pred='begin';rev=!rev">{{'shared.begin'|translate}}</a></th>
+			<th style="width: 100px;"><a ng-click="pred='start';rev=!rev">{{'shared.start'|translate}}</a></th>
 			<th style="width: 100px;"><a ng-click="pred='end';rev=!rev">{{'shared.end'|translate}}</a></th>
 		</tr>
 	</thead>
@@ -60,7 +60,7 @@
 			</td>
 			<td><a ui-sref="main.project.basics({projectId: project._id})">{{project.name}}</a></td>
 			<td>{{project.themes|getObjects:themes|pluck:'name'|pluck:language|join:', '}}</td>
-			<td>{{project.begin|amDateFormat:'YYYY-MM-DD'}}</td>
+			<td>{{project.start|amDateFormat:'YYYY-MM-DD'}}</td>
 			<td>{{project.end|amDateFormat:'YYYY-MM-DD'}}</td>
 		</tr>
 	</tbody>
