--- a/client/dev/partials/projects/activity/collection-input-list.html
+++ b/client/dev/partials/projects/activity/collection-input-list.html
@@ -21,7 +21,8 @@
 
 <br/>
 
-<style> td { text-align: center; } td a { display: block;width: 100%;}</style>
+<style> td { text-align: center; } td a { display: block; width: 100%;}</style>
+
 
 <div style="overflow: auto">
 
@@ -29,14 +30,14 @@
 		<thead>
 			<tr>
 				<th ng-style="{width: (100 / numCols[selectedForm.id]) + '%'}" translate="project.date_due"></th>
-				<th ng-style="{width: (100 / numCols[selectedForm.id]) + '%'}" ng-if="showProject[selectedForm.id]" translate="shared.project"></th>
-				<th ng-style="{width: (100 / numCols[selectedForm.id]) + '%'}" ng-if="showEntities[selectedForm.id]" ng-repeat="entity in project.entities">{{entity.name}}</th>
+				<th ng-style="{width: (100 / numCols[selectedForm.id]) + '%'}" ng-if="showColumn[selectedForm.id].none" translate="shared.project"></th>
+				<th ng-style="{width: (100 / numCols[selectedForm.id]) + '%'}" ng-if="showColumn[selectedForm.id][entity.id]" ng-repeat="entity in project.entities">{{entity.name}}</th>
 			</tr>
 		</thead>
 		<tbody>
 			<tr ng-repeat="(date, status) in inputsStatus[selectedForm.id]">
 				<th>{{date}}</th>
-				<td ng-if="showProject[selectedForm.id]">
+				<td ng-if="showColumn[selectedForm.id].none">
 					<a class="btn btn-xs"
 					   ng-class="{'btn-default': status.none === 'done', 'btn-primary': status.none === 'expected', 'btn-danger': status.none === 'outofschedule'}"
 					   ui-sref="main.project.collection_input_edition({period: date, formId: selectedForm.id, entityId: 'none'})"
@@ -44,7 +45,7 @@
 						{{('project.input_status.' + status.none + (canEdit.none ? '-edit' : '-read')) | translate}}
 					</a>
 				</td>
-				<td ng-if="showEntities[selectedForm.id]" ng-repeat="entity in project.entities">
+				<td ng-if="showColumn[selectedForm.id][entity.id]" ng-repeat="entity in project.entities">
 					<a class="btn btn-xs"
 					   ng-class="{'btn-default': status[entity.id] === 'done', 'btn-primary': status[entity.id] === 'expected', 'btn-danger': status[entity.id] === 'outofschedule'}"
 					   ui-sref="main.project.collection_input_edition({period: date, formId: selectedForm.id, entityId: entity.id})"
@@ -54,6 +55,29 @@
 				</td>
 			</tr>
 		</tbody>
+		<tfoot ng-if="selectedForm.periodicity == 'free'">
+			<tr>
+				<th>
+					<input type="text" 
+						   datepicker-popup="longDate"
+						   name="date"
+						   ng-model="newInputDate"
+						   is-open="dateOpen"
+						   ng-click = "dateOpen = true"
+						   required
+						   class="form-control" />
+				</th>
+				<td ng-if="showColumn[selectedForm.id].none">
+					<a class="btn btn-xs btn-primary" ng-click="addInput('none')">
+						{{('project.input_status.expected' + (canEdit.none ? '-edit' : '-read')) | translate}}
+					</a>
+				</td>
+				<td ng-if="showColumn[selectedForm.id][entity.id]" ng-repeat="entity in project.entities">
+					<a class="btn btn-xs btn-primary" ng-click="addInput(entity.id)">
+						{{('project.input_status.expected' + (canEdit[entity.id] ? '-edit' : '-read')) | translate}}
+					</a>
+				</td>
+			</tr>
+		</tfoot>
 	</table>
-
 </div>
