--- a/client/dev/partials/projects/specification/user-list.html
+++ b/client/dev/partials/projects/specification/user-list.html
@@ -30,7 +30,7 @@
 				</td>
 				<td acl-has-project-role="owner">
 					<a class="btn btn-default btn-xs" ng-click="editUser(user)">
-					   <i class="fa fa-pencil"></i> Modifier
+					   <i class="fa fa-pencil"></i> <span translate="shared.edit"></span>
 					</a>
 				</td>
 			</tr>
