--- a/client/dev/partials/projects/activity/collection-input-list.html
+++ b/client/dev/partials/projects/activity/collection-input-list.html
@@ -29,7 +29,7 @@
 	<table class="table table-bordered table-stripped table-condensed">
 		<thead>
 			<tr>
-				<th ng-style="{width: (100 / numCols[selectedForm.id]) + '%'}" translate="project.date_due"></th>
+				<th ng-style="{width: (100 / numCols[selectedForm.id]) + '%'}" translate="shared.date"></th>
 				<th ng-style="{width: (100 / numCols[selectedForm.id]) + '%'}" ng-if="showColumn[selectedForm.id].none" translate="shared.project"></th>
 				<th ng-style="{width: (100 / numCols[selectedForm.id]) + '%'}" ng-if="showColumn[selectedForm.id][entity.id]" ng-repeat="entity in project.entities">{{entity.name}}</th>
 			</tr>
