--- a/client/dev/partials/projects/activity/olap.html
+++ b/client/dev/partials/projects/activity/olap.html
@@ -16,12 +16,12 @@
 			<div class="form-group">
 				<label for="variable-input" class="col-sm-1 control-label" translate="project.variable"></label>
 				<div class="col-sm-11">
-						<div class="input-group">
+					<div class="input-group">
 						<span class="input-group-addon"><i class="fa fa-tachometer fa-fw"></i></span>
 
 						<select class="form-control input-sm"
-								ng-model="planning.variable"
-								ng-options="v.id as v.name group by v.group for v in sources"></select>
+								ng-model="wrap.chosenElementId"
+								ng-options="v.id as v.name group by v.group for v in elementOptions"></select>
 					</div>
 				</div>
 			</div>
@@ -31,7 +31,7 @@
 				<div class="col-sm-11">
 					<div class="input-group">
 						<span class="input-group-addon"><i class="fa fa-table fa-fw"></i></span>
-						<ui-select id="rows-input" multiple ng-model="planning.rows" name="rows" theme="bootstrap">
+						<ui-select id="rows-input" multiple ng-model="query.rowDimensions" name="rows" theme="bootstrap">
 							<ui-select-match placeholder="{{'project.select_rows'|translate}}">{{('project.dimensions.' + $item.id)|translate}}</ui-select-match>
 							<ui-select-choices group-by="'group'" repeat="row.id as row in availableRows">{{('project.dimensions.' + row.id)|translate}}</ui-select-choices>
 						</ui-select>
@@ -44,7 +44,7 @@
 				<div class="col-sm-11">
 					<div class="input-group">
 						<span class="input-group-addon"><i class="fa fa-columns fa-fw"></i></span>
-						<ui-select id="cols-input" multiple ng-model="planning.cols" name="cols" theme="bootstrap">
+						<ui-select id="cols-input" multiple ng-model="query.colDimensions" name="cols" theme="bootstrap">
 							<ui-select-match placeholder="{{'project.select_cols'|translate}}">{{('project.dimensions.' + $item.id)|translate}}</ui-select-match>
 							<ui-select-choices group-by="'group'" repeat="col.id as col in availableCols">{{('project.dimensions.' + col.id)|translate}}</ui-select-choices>
 						</ui-select>
@@ -74,11 +74,11 @@
 								<input type="text" 
 									   datepicker-popup="longDate"
 									   name="start"
-									   ng-model="dates.start"
+									   ng-model="query.filters._start"
 									   is-open="startDateOpen"
 									   ng-click = "startDateOpen = true"
 									   required
-									   ng-max="dates.end"
+									   ng-max="query.filters._end"
 									   class="form-control input-sm" />
 							</div>
 						</div>
@@ -93,10 +93,10 @@
 								<input type="text" 
 									   datepicker-popup="longDate"
 									   name="end"
-									   ng-model="dates.end"
+									   ng-model="query.filters._end"
 									   is-open="endDateOpen"
 									   ng-click = "endDateOpen = true"
-									   ng-min="dates.start"
+									   ng-min="query.filters._start"
 									   class="form-control input-sm"
 									   required />
 							</div>
@@ -110,7 +110,7 @@
 				<div class="col-sm-11">
 					<div class="input-group">
 						<span class="input-group-addon"><i class="fa fa-filter fa-fw"></i></span>
-						<ui-select id="{{dimension.id}}-input" multiple ng-model="planning.filters[dimension.id]" name="{{dimension}}" theme="bootstrap">
+						<ui-select id="{{dimension.id}}-input" multiple ng-model="query.filters[dimension.id]" name="{{dimension}}" theme="bootstrap">
 							<ui-select-match placeholder="{{'project.select_filters'|translate}}">{{$item.name}}</ui-select-match>
 							<ui-select-choices repeat="filter.id as filter in dimension.items">{{filter.name}}</ui-select-choices>
 						</ui-select>
@@ -137,7 +137,6 @@
 				</tr>
 			</tbody>
 		</table>
-		
 	</div>
 
 	<olap-grid cols="display.cols" rows="display.rows" data="display.data"></olap-grid>
