--- a/client/dev/partials/projects/menu.html
+++ b/client/dev/partials/projects/menu.html
@@ -65,8 +65,8 @@
 						<a ui-sref="main.project.collection_input_list"
 						   class="list-group-item"
 						   ng-class="{active: $state.is('main.project.collection_input_list') || $state.is('main.project.collection_input_edition')}"
-						   eat-click-if="!project._id || !projectHasFormElements || !project.entities.length"
-						   disable-if="!project._id || !projectHasFormElements || !project.entities.length">
+						   eat-click-if="!project._id || !projectActivityReady"
+						   disable-if="!project._id || !projectActivityReady">
 							
 							<i class="fa fa-pencil fa-fw"></i>
 							<span translate="project.collection_input_list"></span>
@@ -75,8 +75,8 @@
 						<a ui-sref="main.project.activity_reporting"
 						   ui-sref-active="active"
 						   class="list-group-item"
-						   eat-click-if="!project._id || !projectHasFormElements || !project.entities.length"
-						   disable-if="!project._id || !projectHasFormElements || !project.entities.length">
+						   eat-click-if="!project._id || !projectActivityReady"
+						   disable-if="!project._id || !projectActivityReady">
 
 							<i class="fa fa-line-chart fa-fw"></i>
 							<span translate="shared.reporting_general"></span>
@@ -85,8 +85,8 @@
 						<a ui-sref="main.project.detailed_activity_reporting"
 						   ui-sref-active="active"
 						   class="list-group-item"
-						   eat-click-if="!project._id || !projectHasFormElements || !project.entities.length"
-						   disable-if="!project._id || !projectHasFormElements || !project.entities.length">
+						   eat-click-if="!project._id || !projectActivityReady"
+						   disable-if="!project._id || !projectActivityReady">
 							<i class="fa fa-bar-chart fa-fw"></i>
 							<span translate="project.reporting_compare_sites"></span>
 						</a>
@@ -94,8 +94,8 @@
 						<a ui-sref="main.project.olap"
 						   ui-sref-active="active"
 						   class="list-group-item"
-						   eat-click-if="!project._id || !projectHasFormElements || !project.entities.length"
-						   disable-if="!project._id || !projectHasFormElements || !project.entities.length">
+						   eat-click-if="!project._id || !projectActivityReady"
+						   disable-if="!project._id || !projectActivityReady">
 							<i class="fa fa-table fa-fw"></i>
 							<span translate="project.pivot_table"></span>
 						</a>
