Fix: free inputs were always created on today's date.

--- a/client/dev/partials/projects/activity/collection-input-list.html
+++ b/client/dev/partials/projects/activity/collection-input-list.html
@@ -65,7 +65,7 @@
 				<th>
 					<input type="text"
 						   datepicker-popup="longDate"
-						   ng-model="newInputDate"
+						   ng-model="newInputDate.date"
 						   is-open="dateOpen"
 						   ng-click="dateOpen=true"
 						   required
@@ -86,5 +86,6 @@
 			</tr>
 		</tfoot>
 	</table>
+{{date.newInputDate}}
 </div>
 
